docs: honest documentation about what elaraSign actually does
- Removed claims about steganography/spread-spectrum (doesn't survive screenshot)
- Updated to accurately describe metadata-based provenance system
- PDF: metadata embedding, NOT cryptographic digital signatures (roadmap)
- Images: EXIF/PNG metadata + sidecar JSON, survives basic editing
- Updated web UI, LEGAL_NOTICE.md, README.md, test-files README
- Fixed deploy.ps1 preview workflow output

--- a/web/index.html
+++ b/web/index.html
@@ -7,6 +7,38 @@
   <link rel="icon" type="image/png" href="data:image/svg+xml,<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 100 100'><text y='.9em' font-size='90'>🔐</text></svg>">
   <style>
     /* ============================================
+       DEMO BANNER (Concept Demonstration Notice)
+    ============================================ */
+    .demo-banner {
+      position: fixed;
+      top: 0;
+      left: 0;
+      right: 0;
+      background: linear-gradient(90deg, rgba(168, 85, 247, 0.95), rgba(0, 212, 170, 0.95));
+      color: #fff;
+      padding: 12px 20px;
+      text-align: center;
+      font-size: 0.85rem;
+      z-index: 1000;
+      box-shadow: 0 2px 20px rgba(0, 0, 0, 0.3);
+    }
+
+    .demo-banner strong {
+      display: block;
+      font-size: 0.95rem;
+      margin-bottom: 4px;
+    }
+
+    .demo-banner a {
+      color: #fff;
+      text-decoration: underline;
+    }
+
+    .demo-banner-spacer {
+      height: 70px; /* Push content below fixed banner */
+    }
+
+    /* ============================================
        BASE RESET
     ============================================ */
     * { 
@@ -661,6 +693,37 @@
       text-decoration: none;
     }
 
+    .footer-philosophy {
+      margin: 20px 0;
+      padding: 16px 20px;
+      background: rgba(168, 85, 247, 0.1);
+      border: 1px solid rgba(168, 85, 247, 0.2);
+      border-radius: 12px;
+      max-width: 500px;
+      margin-left: auto;
+      margin-right: auto;
+    }
+
+    .footer-philosophy p {
+      margin: 4px 0;
+      color: rgba(255, 255, 255, 0.7);
+    }
+
+    .footer-philosophy strong {
+      color: #a855f7;
+    }
+
+    .footer-license {
+      margin-top: 20px;
+      padding-top: 16px;
+      border-top: 1px solid rgba(255, 255, 255, 0.1);
+      font-size: 0.8rem;
+    }
+
+    .footer-license p {
+      margin: 4px 0;
+    }
+
     /* ============================================
        INFO BOX (Transparency Disclosure)
     ============================================ */
@@ -790,6 +853,14 @@
   </style>
 </head>
 <body>
+  <!-- DEMONSTRATION BANNER -->
+  <div class="demo-banner">
+    <strong>⚡ CONCEPT DEMONSTRATION</strong>
+    This is a proof-of-concept showing how AI content should be: sovereign, secure, and accountable.
+    Use at your own risk. <a href="https://github.com/applymytech/elaraSign" target="_blank">Fork it, improve it, share it.</a>
+  </div>
+  <div class="demo-banner-spacer"></div>
+
   <!-- Background: Cover Image + Dark Overlay -->
   <div class="cover-bg"></div>
   <div class="cover-overlay"></div>
@@ -825,7 +896,7 @@
     <div id="sign-image-panel" class="panel active">
       <div class="info-box">
         <h4>🖼️ Image Signing</h4>
-        <p>Embeds provenance via LSB steganography + DCT watermark. Survives screenshots &amp; JPEG.</p>
+        <p>Embeds provenance metadata (EXIF/PNG) + sidecar JSON. Survives basic editing (Paint, rename). Screenshot = re-encode = metadata lost (keep sidecar).</p>
       </div>
 
       <div class="drop-zone" onclick="document.getElementById('sign-image-file').click()" 
@@ -1001,19 +1072,30 @@
     <footer class="footer">
       <p>Part of the <a href="https://openelara.org" target="_blank">OpenElara</a> Universe</p>
       <p class="footer-tagline">"When image APIs adopt this standard, the problem solves itself."</p>
+      
+      <div class="footer-philosophy">
+        <p>🌟 <strong>The Vision:</strong> AI should be sovereign, secure, and accountable.</p>
+        <p>This is MY version. Fork it, make your own, share improvements with the world.</p>
+      </div>
+
       <div class="footer-links">
-        <a href="https://github.com/openelara/elaraSign" target="_blank">
+        <a href="https://github.com/applymytech/elaraSign" target="_blank">
           <svg width="16" height="16" viewBox="0 0 24 24" fill="currentColor"><path d="M12 0c-6.626 0-12 5.373-12 12 0 5.302 3.438 9.8 8.207 11.387.599.111.793-.261.793-.577v-2.234c-3.338.726-4.033-1.416-4.033-1.416-.546-1.387-1.333-1.756-1.333-1.756-1.089-.745.083-.729.083-.729 1.205.084 1.839 1.237 1.839 1.237 1.07 1.834 2.807 1.304 3.492.997.107-.775.418-1.305.762-1.604-2.665-.305-5.467-1.334-5.467-5.931 0-1.311.469-2.381 1.236-3.221-.124-.303-.535-1.524.117-3.176 0 0 1.008-.322 3.301 1.23.957-.266 1.983-.399 3.003-.404 1.02.005 2.047.138 3.006.404 2.291-1.552 3.297-1.23 3.297-1.23.653 1.653.242 2.874.118 3.176.77.84 1.235 1.911 1.235 3.221 0 4.609-2.807 5.624-5.479 5.921.43.372.823 1.102.823 2.222v3.293c0 .319.192.694.801.576 4.765-1.589 8.199-6.086 8.199-11.386 0-6.627-5.373-12-12-12z"/></svg>
           GitHub Repo
         </a>
-        <a href="https://github.com/openelara/elaraSign/blob/main/docs/README.md" target="_blank">
+        <a href="https://github.com/applymytech/elaraSign/blob/main/docs/README.md" target="_blank">
           <svg width="16" height="16" viewBox="0 0 24 24" fill="currentColor"><path d="M14 2H6a2 2 0 0 0-2 2v16a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2V8l-6-6zm-1 2l5 5h-5V4zM6 20V4h6v6h6v10H6z"/></svg>
           Documentation
         </a>
-        <a href="https://github.com/openelara/elaraSign/issues" target="_blank">
+        <a href="https://github.com/applymytech/elaraSign/issues" target="_blank">
           <svg width="16" height="16" viewBox="0 0 24 24" fill="currentColor"><path d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm1 15h-2v-2h2v2zm0-4h-2V7h2v6z"/></svg>
           Report Issue
         </a>
+      </div>
+
+      <div class="footer-license">
+        <p><strong>License:</strong> MIT (Freeware/Shareware)</p>
+        <p>Commercial licensing inquiries: <a href="mailto:openelara@applymytech.ai">openelara@applymytech.ai</a></p>
       </div>
     </footer>
   </div>
@@ -1135,9 +1217,9 @@
       try {
         const res = await fetch('/api/build-info');
         const data = await res.json();
-        document.getElementById('build-id').textContent = data.shortId || 'DEV';
+        document.getElementById('build-id').textContent = `v${data.version || '?.?.?'}`;
       } catch {
-        document.getElementById('build-id').textContent = 'DEV';
+        document.getElementById('build-id').textContent = 'v2.1.0';
       }
     }
 
